<resources>
    <string name="app_name">TXTR</string>
    <string name="app_name_full">TXTR for Android</string>
    <string name="crash_report_account" translatable="false">bugs@droidko.com</string>
    <string name="pin">PIN</string>
    <string name="action_settings">Settings</string>
    <string name="action_add">New conversation</string>
    <string name="action_accounts">Manage accounts</string>
    <string name="action_end_conversation">End this conversation</string>
    <string name="action_contact_details">Contact details</string>
    <string name="action_muc_details">Group details</string>
    <string name="action_secure">Secure conversation</string>
    <string name="action_add_account">Link existing account</string>
    <string name="action_add_account_txtr">New PIN</string>
    <string name="action_edit_contact">Edit name</string>
    <string name="action_add_phone_book">Add to phone book</string>
    <string name="action_delete_contact">Delete from roster</string>
    <string name="action_block_contact">Block contact</string>
    <string name="action_unblock_contact">Unblock contact</string>
    <string name="action_block_domain">Block domain</string>
    <string name="action_unblock_domain">Unblock domain</string>
    <string name="title_activity_manage_accounts">Manage Accounts</string>
    <string name="title_activity_settings">Settings</string>
    <string name="title_activity_conference_details">Group Details</string>
    <string name="title_activity_contact_details">Contact Details</string>
    <string name="title_activity_conversations">TXTR</string>
    <string name="title_activity_sharewith">Share with Conversation</string>
    <string name="title_activity_start_conversation">Start Conversation</string>
    <string name="title_activity_choose_contact">Choose contact</string>
    <string name="title_activity_block_list">Block list</string>
    <string name="just_now">just now</string>
    <string name="minute_ago">1 min ago</string>
    <string name="minutes_ago">%d mins ago</string>
    <string name="unread_conversations">unread messages</string>
    <string name="sending">sending…</string>
    <string name="encrypted_message">Decrypting message. Please wait…</string>
    <string name="nick_in_use">Nickname is already in use</string>
    <string name="admin">Admin</string>
    <string name="owner">Owner</string>
    <string name="moderator">Moderator</string>
    <string name="participant">Participant</string>
    <string name="visitor">Visitor</string>
    <string name="remove_contact_text">Would you like to remove %s from your roster? The conversation associated with this contact will not be removed.</string>
    <string name="block_contact_text">Would you like to block %s from sending you messages?</string>
    <string name="unblock_contact_text">Would you like to unblock %s and allow them to send you messages?</string>
    <string name="block_domain_text">Block all contacts from %s?</string>
    <string name="unblock_domain_text">Unblock all contacts from %s?</string>
    <string name="contact_blocked">Contact blocked</string>
    <string name="remove_bookmark_text">Would you like to remove %s as a bookmark? The conversation associated with this bookmark will not be removed.</string>
    <string name="register_account">Register new account on server</string>
    <string name="change_password_on_server">Change password on server</string>
    <string name="share_with">Share with…</string>
    <string name="start_conversation">Start Conversation</string>
    <string name="invite_contact">Invite Contact</string>
    <string name="contacts">Contacts</string>
    <string name="cancel">Cancel</string>
    <string name="set">Set</string>
    <string name="add">Add</string>
    <string name="edit">Edit</string>
    <string name="delete">Delete</string>
    <string name="block">Block</string>
    <string name="unblock">Unblock</string>
    <string name="save">Save</string>
    <string name="ok">OK</string>
    <string name="crash_report_title">TXTR has crashed</string>
    <string name="crash_report_message">By sending in stack traces you are helping the ongoing development of TXTR\n<b>Warning:</b> This will use your XMPP account to send the stack trace to the developer.</string>
    <string name="send_now">Send now</string>
    <string name="send_never">Never ask again</string>
    <string name="problem_connecting_to_account">Unable to connect to account</string>
    <string name="problem_connecting_to_accounts">Unable to connect to multiple accounts</string>
    <string name="touch_to_fix">Touch here to manage your accounts</string>
    <string name="attach_file">Attach file</string>
    <string name="not_in_roster">The contact is not in your roster. Would you like to add it?</string>
    <string name="add_contact">Add contact</string>
    <string name="send_failed">delivery failed</string>
    <string name="send_rejected">rejected</string>
    <string name="preparing_image">Preparing image for transmission</string>
    <string name="action_clear_history">Clear history</string>
    <string name="clear_conversation_history">Clear Conversation History</string>
    <string name="clear_histor_msg">Do you want to delete all messages within this Conversation?\n\n<b>Warning:</b> This will not influence messages stored on other devices or servers.</string>
    <string name="delete_messages">Delete messages</string>
    <string name="also_end_conversation">End this conversation afterwards</string>
    <string name="choose_presence">Choose presence to contact</string>
    <string name="send_plain_text_message">Send plain text message</string>
    <string name="send_otr_message">Send OTR encrypted message</string>
    <string name="send_pgp_message">Send OpenPGP encrypted message</string>
    <string name="your_nick_has_been_changed">Your nickname has been changed</string>
    <string name="download_image">Download Image</string>
    <string name="send_unencrypted">Send unencrypted</string>
    <string name="decryption_failed">Decryption failed. Maybe you don’t have the proper private key.</string>
    <string name="openkeychain_required">OpenKeychain</string>
    <string name="openkeychain_required_long">TXTR utilizes a third party app called <b>OpenKeychain</b> to encrypt and decrypt messages and to manage your public keys.\n\nOpenKeychain is licensed under GPLv3 and available on F-Droid and Google Play.\n\n<small>(Please restart TXTR afterwards.)</small></string>
    <string name="restart">Restart</string>
    <string name="install">Install</string>
    <string name="offering">offering…</string>
    <string name="waiting">waiting…</string>
    <string name="no_pgp_key">No OpenPGP Key found</string>
    <string name="contact_has_no_pgp_key">TXTR is unable to encrypt your messages because your contact is not announcing his or hers public key.\n\n<small>Please ask your contact to setup OpenPGP.</small></string>
    <string name="no_pgp_keys">No OpenPGP Keys found</string>
    <string name="contacts_have_no_pgp_keys">TXTR is unable to encrypt your messages because your contacts are not announcing their public key.\n\n<small>Please ask your contacts to setup OpenPGP.</small></string>
    <string name="encrypted_message_received"><i>Encrypted message received. Touch to view and decrypt.</i></string>
    <string name="pref_general">General</string>
    <string name="pref_xmpp_resource">XMPP resource</string>
    <string name="pref_xmpp_resource_summary">The name this client identifies itself with</string>
    <string name="pref_accept_files">Accept files</string>
    <string name="pref_accept_files_summary">Automatically accept files smaller than…</string>
    <string name="pref_notification_settings">Notification Settings</string>
    <string name="pref_notifications">Notifications</string>
    <string name="pref_notifications_summary">Notify when a new message arrives</string>
    <string name="pref_vibrate">Vibrate</string>
    <string name="pref_vibrate_summary">Also vibrate when a new message arrives</string>
    <string name="pref_sound">Sound</string>
    <string name="pref_sound_summary">Play ringtone with notification</string>
    <string name="pref_conference_notifications">Group notifications</string>
    <string name="pref_conference_notifications_summary">Always notify when a new group message arrives instead of only when highlighted</string>
    <string name="pref_notification_grace_period">Notification grace period</string>
    <string name="pref_notification_grace_period_summary">Disable notifications for a short time after a carbon copy was received</string>
    <string name="pref_advanced_options">Advanced Options</string>
    <string name="pref_never_send_crash">Never send crash reports</string>
    <string name="pref_never_send_crash_summary">By sending in stack traces you are helping the ongoing development of TXTR</string>
    <string name="pref_confirm_messages">Confirm Messages</string>
    <string name="pref_confirm_messages_summary">Let your contact know when you have received and read a message</string>
    <string name="pref_ui_options">UI Options</string>
    <string name="openpgp_error">OpenKeychain reported an error</string>
    <string name="error_decrypting_file">I/O Error decrypting file</string>
    <string name="accept">Accept</string>
    <string name="error">An error has occurred</string>
    <string name="mgmt_account_are_you_sure">Are you sure?</string>
    <string name="mgmt_account_delete_confirm_text">If you delete your account your entire conversation history will be lost</string>
    <string name="publish">Publish</string>
    <string name="touch_to_choose_picture">Touch avatar to select picture from gallery</string>
    <string name="publish_avatar_explanation">Please note: Everyone subscribed to your presence updates will be allowed to see this picture.</string>
    <string name="or_long_press_for_default">(Or long press to bring back default)</string>
    <string name="account_settings_pin">PIN</string>
    <string name="createPin_no_internet">No internet access</string>
    <string name="dismissPin_eliminated_successfully">PIN eliminated successfully</string>
    <string name="dismissPin_state_203">The PIN was already eliminated from TXTR servers.\n However, contacts from this PIN has been removed from your device.</string>
    <string name="pinDismiss_state_1">The PIN has been eliminated from TXTR servers and cannot receive messages anymore. \n Contacts from this PIN has also been removed from your device.</string>
    <string name="pinDismiss_state_error">There was an error eliminating the PIN. Try again later. \n If this error continues, please contact support and let them now this:</string>
    <string name="pinDismiss_state_onlylocal">The PIN has been eliminated from your device. \n Contacts from this PIN has also been removed.</string>
    <string name="pinDismiss_error_code">Error Code: </string>
    <string name="dismissPin_info_onlylocalpin">Take in mind that you don\'t have admin privileges on this PIN (you didn\'t created it). \n The PIN will only be deleted from your device, not from TXTR servers,
        and will still be able to receive messages on other devices.</string>
    <string name="card_createpin_ready">PIN created and ready to chat</string>
    <string name="card_createpin_share">Share this PIN\'s with anybody</string>
    <string name="card_createpin_dispose">Dispose it whenever you want</string>
    <string name="card_createpin_loggingin">Logging in...</string>
    <string name="tutorial_step_5_header">Start TXTING now!</string>
    <string name="tutorial_step_5_info_1">Create a new PIN now</string>
    <string name="tutorial_step_5_info_2">or use an existing one</string>
    <string name="tutorial_step_5_button_new_account">New Account</string>
    <string name="tutorial_step_5_button_link_account">Link account</string>
</resources>