<?xml version="1.0" encoding="utf-8"?>

<!-- This is the InnerContent of Expand/Collapse Area -->

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="vertical"
              android:layout_width="match_parent"
              android:layout_height="match_parent">

    <TableLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content">

        <TableRow
            android:layout_width="fill_parent"
            android:layout_height="fill_parent">

            <ImageView
                android:layout_width="32dp"
                android:layout_height="32dp"
                android:id="@+id/ic_card_createpin_1"
                android:src="@drawable/ic_notification" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/card_createpin_ready"
                android:id="@+id/tv_card_createpin_1"
                style="@style/card.expand_simple_title"
                android:textSize="16sp"/>
        </TableRow>

        <TableRow
            android:layout_width="fill_parent"
            android:layout_height="fill_parent">

            <ImageView
                android:layout_width="32dp"
                android:layout_height="32dp"
                android:id="@+id/ic_card_createpin_2"
                android:src="@drawable/ic_action_link" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/card_createpin_share"
                android:id="@+id/tv_card_createpin_2"
                style="@style/card.expand_simple_title"
                android:textSize="16sp"/>
        </TableRow>

        <TableRow
            android:layout_width="fill_parent"
            android:layout_height="fill_parent">

            <ImageView
                android:layout_width="32dp"
                android:layout_height="32dp"
                android:id="@+id/ic_card_createpin_3"
                android:src="@drawable/ic_action_discard" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/card_createpin_dispose"
                android:id="@+id/tv_card_createpin_3"
                style="@style/card.expand_simple_title"
                android:textSize="16sp"/>
        </TableRow>
    </TableLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/card_createpin_loggingin"
        android:id="@+id/tv_card_createpin_4"
        style="@style/card.expand_simple_title"
        android:textSize="16sp"
        android:layout_gravity="center"
        android:textStyle="bold|italic"/>

</LinearLayout>