<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/account_settings_pin"
        android:textColor="@color/primarytext"
        android:textSize="?attr/TextSizeBody"
        android:visibility="gone"/>

    <TextView
        android:id="@+id/info_no_internet"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/createPin_no_internet"
        android:textColor="@color/red"
        android:autoText="false"
        android:textIsSelectable="true"
        android:password="false"
        android:gravity="clip_horizontal|center|clip_vertical"
        android:layout_gravity="center"
        android:layout_marginBottom="8dp"
        android:textStyle="bold"
        android:textSize="?attr/TextSizeHeadline"
        android:visibility="gone"/>

    <TextView
        android:id="@+id/info_error"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/error"
        android:textColor="@color/red"
        android:autoText="false"
        android:textIsSelectable="true"
        android:password="false"
        android:gravity="clip_horizontal|center|clip_vertical"
        android:layout_gravity="center"
        android:layout_marginBottom="8dp"
        android:textStyle="bold"
        android:textSize="?attr/TextSizeHeadline"
        android:visibility="gone"/>

    <TextView
        android:id="@+id/info_pin_eliminated_successfully"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/dismissPin_eliminated_successfully"
        android:textColor="@color/green"
        android:autoText="false"
        android:textIsSelectable="true"
        android:password="false"
        android:gravity="clip_horizontal|center|clip_vertical"
        android:layout_gravity="center"
        android:layout_marginBottom="8dp"
        android:textStyle="bold"
        android:textSize="?attr/TextSizeHeadline"
        android:visibility="gone"/>

    <TextView
        android:id="@+id/dismiss_warning"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/mgmt_account_are_you_sure"
        android:textColor="@color/primarytext"
        android:textColorHint="@color/secondarytext"
        android:textSize="?attr/TextSizeHeadline"
        android:autoText="false"
        android:textIsSelectable="false"
        android:password="false"
        android:gravity="clip_horizontal|center|clip_vertical"
        android:layout_gravity="center"
        android:textStyle="bold"
        android:layout_marginBottom="8dp" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp">

        <ImageView
            android:id="@+id/dismiss_avatar"
            android:layout_width="72dp"
            android:layout_height="72dp"
            android:src="@drawable/ic_profile" />

        <RelativeLayout
            android:orientation="horizontal"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_toRightOf="@id/dismiss_avatar"
            android:layout_centerVertical="true">

            <TextView
                android:id="@+id/account_pin"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:hint="XXXXXXX"
                android:textColor="@color/primarytext"
                android:textColorHint="@color/secondarytext"
                android:textSize="@dimen/TextBig"
                android:autoText="false"
                android:textIsSelectable="false"
                android:password="false"
                android:gravity="clip_horizontal|center|clip_vertical"
                android:layout_gravity="center"
                android:layout_centerVertical="true"
                android:layout_centerHorizontal="true" />
        </RelativeLayout>

    </RelativeLayout>

    <TextView
        android:id="@+id/dismiss_disclaimer"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/mgmt_account_delete_confirm_text"
        android:textColor="@color/primarytext"
        android:textColorHint="@color/secondarytext"
        android:textSize="?attr/TextSizeBody"
        android:autoText="false"
        android:textIsSelectable="false"
        android:password="false"
        android:gravity="clip_horizontal|center|clip_vertical"
        android:layout_gravity="center"
        android:visibility="visible"/>

    <TextView
        android:id="@+id/dismiss_info_onlylocalpin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/dismissPin_info_onlylocalpin"
        android:textColor="@color/primarytext"
        android:textColorHint="@color/secondarytext"
        android:textSize="?attr/TextSizeBody"
        android:autoText="false"
        android:textIsSelectable="false"
        android:password="false"
        android:gravity="clip_horizontal|center|clip_vertical"
        android:layout_gravity="center"
        android:visibility="gone"/>

    <TextView
        android:id="@+id/dismiss_result_1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/pinDismiss_state_1"
        android:textColor="@color/primarytext"
        android:textColorHint="@color/secondarytext"
        android:textSize="?attr/TextSizeBody"
        android:autoText="false"
        android:textIsSelectable="false"
        android:password="false"
        android:gravity="clip_horizontal|center|clip_vertical"
        android:layout_gravity="center"
        android:visibility="gone"/>

    <TextView
        android:id="@+id/dismiss_result_203"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/dismissPin_state_203"
        android:textColor="@color/primarytext"
        android:textColorHint="@color/secondarytext"
        android:textSize="?attr/TextSizeBody"
        android:autoText="false"
        android:textIsSelectable="false"
        android:password="false"
        android:gravity="clip_horizontal|center|clip_vertical"
        android:layout_gravity="center"
        android:visibility="gone"/>

    <TextView
        android:id="@+id/dismiss_result_onlylocal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/pinDismiss_state_onlylocal"
        android:textColor="@color/primarytext"
        android:textColorHint="@color/secondarytext"
        android:textSize="?attr/TextSizeBody"
        android:autoText="false"
        android:textIsSelectable="false"
        android:password="false"
        android:gravity="clip_horizontal|center|clip_vertical"
        android:layout_gravity="center"
        android:visibility="gone"/>

    <TextView
        android:id="@+id/dismiss_result_unknown"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/pinDismiss_state_error"
        android:textColor="@color/primarytext"
        android:textColorHint="@color/secondarytext"
        android:textSize="?attr/TextSizeBody"
        android:autoText="false"
        android:textIsSelectable="false"
        android:password="false"
        android:gravity="clip_horizontal|center|clip_vertical"
        android:layout_gravity="center"
        android:visibility="gone"
        />

    <TextView
        android:id="@+id/dismiss_error_code"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/pinDismiss_error_code"
        android:textColor="@color/primarytext"
        android:textColorHint="@color/secondarytext"
        android:textSize="?attr/TextSizeBody"
        android:autoText="false"
        android:textIsSelectable="false"
        android:password="false"
        android:gravity="clip_horizontal|center|clip_vertical"
        android:layout_gravity="center"
        android:visibility="gone"
        android:textStyle="bold"
        />

    <ImageView
        android:id="@+id/ok_icon"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_action_accept"
        android:visibility="gone"/>

    <ImageView
        android:id="@+id/error_icon"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_action_remove"
        android:visibility="gone"/>

    <RelativeLayout
        android:id="@+id/loadingPanel"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="8dp">

        <ProgressBar
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:indeterminate="true"/>
    </RelativeLayout>

    <TextView
        android:id="@+id/info_pin_contacts"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="PIN's contacts"
        android:textColor="@color/primarytext"
        android:textColorHint="@color/secondarytext"
        android:textSize="?attr/TextSizeHeadline"
        android:autoText="false"
        android:textIsSelectable="false"
        android:password="false"
        android:gravity="clip_horizontal|center|clip_vertical"
        android:layout_gravity="center"
        android:textStyle="bold"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="8dp" />

    <TextView
        android:id="@+id/info_pin_no_contacts"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="This PIN has no contacts"
        android:textColor="@color/primarytext"
        android:textColorHint="@color/secondarytext"
        android:textSize="?attr/TextSizeHeadline"
        android:autoText="false"
        android:textIsSelectable="false"
        android:password="false"
        android:gravity="clip_horizontal|center|clip_vertical"
        android:layout_gravity="center"
        android:textStyle="bold"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="8dp" />

</LinearLayout>