<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/primarybackground" >

    <LinearLayout
        android:id="@+id/button_bar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true" >

        <Button
            android:id="@+id/cancel_button"
            style="?android:attr/borderlessButtonStyle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/cancel"
            android:textColor="@color/primarytext" />

        <View
            android:layout_width="1dp"
            android:layout_height="fill_parent"
            android:layout_marginBottom="7dp"
            android:layout_marginTop="7dp"
            android:background="@color/divider" />

        <Button
            android:id="@+id/publish_button"
            style="?android:attr/borderlessButtonStyle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:enabled="false"
            android:text="@string/publish"
            android:textColor="@color/secondarytext" />
    </LinearLayout>

    <TextView
        android:id="@+id/hint_or_warning"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:minLines="3"
        android:text="@string/publish_avatar_explanation"
        android:textColor="@color/primarytext"
        android:textSize="?attr/TextSizeBody"
        android:gravity="center"
        android:layout_above="@id/button_bar"/>

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:weightSum="6"
        android:paddingTop="8dp"
        android:layout_above="@id/hint_or_warning">

        <TextView
            android:id="@+id/account"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/primarytext"
            android:textSize="28sp"
            android:text="testtesttest"
            android:textAllCaps="true"
            android:gravity="center"
            android:layout_weight="1"
            android:layout_margin="4dp"/>

        <com.makeramen.RoundedImageView
            xmlns:app="http://schemas.android.com/apk/res-auto"
            app:riv_corner_radius="5dip"
            app:riv_border_width="3dip"
            app:riv_border_color="@color/imageborder"
            android:id="@+id/account_image"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:scaleType="fitCenter"
            android:layout_weight="5"
            android:src="@drawable/ic_profile"/>

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_margin="4dp">

            <TextView
                android:id="@+id/hint"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/touch_to_choose_picture"
                android:textColor="@color/secondarytext"/>

            <TextView
                android:id="@+id/secondary_hint"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/or_long_press_for_default"
                android:textColor="@color/secondarytext"/>

        </LinearLayout>

    </LinearLayout>

</RelativeLayout>