<FrameLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/content"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/tutorial_step_5">

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/bg_black_overlay30">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:padding="16dp"
            android:layout_gravity="center">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:text="@string/tutorial_step_5_header"
                android:id="@+id/text_slogan"
                android:layout_centerHorizontal="true"
                android:layout_centerVertical="true"
                android:textStyle="bold"
                android:textColor="@color/white"
                android:layout_marginTop="16dp"
                style="@style/text_shadow"/>

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/step_image"
                android:src="@drawable/tutorial_step_5_img"
                android:layout_centerHorizontal="true"
                android:layout_gravity="center"
                android:layout_above="@id/text_slogan"
                android:scaleType="centerInside" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="@string/tutorial_step_5_info_1"
                android:id="@+id/step_info_1"
                android:layout_below="@+id/text_slogan"
                android:layout_centerHorizontal="true"
                android:gravity="center"
                android:layout_marginTop="24dp"
                android:textColor="@color/white"
                style="@style/text_shadow"/>

            <Button
                android:layout_marginTop="12dp"
                android:padding="12dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/tutorial_step_5_button_new_account"
                android:id="@+id/button_new_account"
                android:layout_below="@id/step_info_1"
                android:layout_centerHorizontal="true"
                android:background="@drawable/flat_selector"
                android:textColor="@color/white"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="@string/tutorial_step_5_info_2"
                android:id="@+id/step_info_2"
                android:layout_below="@+id/button_new_account"
                android:layout_centerHorizontal="true"
                android:gravity="center"
                android:layout_marginTop="24dp"
                android:textColor="@color/white"
                style="@style/text_shadow"/>

            <Button
                android:layout_marginTop="-8dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/tutorial_step_5_button_link_account"
                android:id="@+id/button_link_account"
                android:layout_below="@id/step_info_2"
                android:layout_centerHorizontal="true"
                android:background="@color/transparent"
                android:textColor="@color/orange"
                android:textStyle="bold"
                android:textSize="@dimen/TextImportant"
                style="@style/text_shadow"/>


        </RelativeLayout>

    </FrameLayout>

</FrameLayout>